--- a/.textlintrc
+++ b/.textlintrc
@@ -2,7 +2,9 @@
     "plugins": ["markdown", "latex2e"],
     "filters": {},
     "rules": {
-        "preset-ja-spacing": true,
+        "preset-ja-spacing": {
+            "ja-space-between-half-and-full-width": false
+        },
         "preset-ja-technical-writing": {
             "no-doubled-joshi": {
                 "strict": false,
